--- a/packages/books-ui/src/app/user-info/user-info.component.html
+++ b/packages/books-ui/src/app/user-info/user-info.component.html
@@ -1,5 +1,34 @@
-<p>
-  user-info works!
-  {{auth.userInfo?.name}}
-  <img *ngIf="!!auth.userInfo?.picture" [src]="auth.userInfo?.picture" style="width: 60px; height: 60px" />
-</p>
+<span>
+  <button mat-button>
+    <span *ngIf="auth.logged">Hello, </span>
+    {{auth.userInfo?.name}}
+  </button>
+  <img *ngIf="!!auth.userInfo?.picture" [src]="auth.userInfo?.picture" class="avatar" />
+  <!-- <div class="avatar"> -->
+  <button mat-icon-button>
+    <mat-icon *ngIf="!auth.userInfo?.picture">account_circle</mat-icon>
+  </button>
+  <!-- </div> -->
+  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+    <mat-icon>more_vert</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item *ngIf="auth.logged" (click)="logout()">
+      <mat-icon>dialpad</mat-icon>
+      <span>退出登录</span>
+    </button>
+    <button mat-menu-item *ngIf="!auth.logged" (click)="login()">
+      <mat-icon>dialpad</mat-icon>
+      <span>登录</span>
+    </button>
+    <button mat-menu-item disabled>
+      <mat-icon>voicemail</mat-icon>
+      <span>Check voice mail</span>
+    </button>
+    <!-- <button mat-menu-item>
+      <mat-icon>notifications_off</mat-icon>
+      <span>Disable alerts</span>
+    </button> -->
+  </mat-menu>
+
+</span>
